feat: enhance Badge component with improved class bindings and styling options

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/badge/badge.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/badge/badge.component.html
@@ -1,16 +1,15 @@
 <div
-    class="badge"
-    [ngClass]="{'type' : badgeType(), 'size' : badgeSize()}"
+    class="badge size-{{ badgeSize() }} type-{{ badgeType() }}"
+    data-testid="badge"
+    [ngClass]="{'hidden': !showBadge()}"
 >
-    <ng-container *ngIf="badgeSize() !== 'XS' && badgeSize() !== 'S'">
-        <rte-icon
-            *ngIf="showIcon()"
-            class="badge-icon"
-            [name]="icon()"
-            [size]="badgeSize() === 'M' ? 12 : 20"
-        ></rte-icon>
-        <p *ngIf="showText()" class="badge-text">
-            {{displayCount()}}
-        </p>
-    </ng-container>
+    <rte-icon
+        *ngIf="showIcon()"
+        class="badge-icon"
+        [name]="icon()"
+        [size]="iconSize()!"
+    />
+    <p *ngIf="showText()" class="badge-text">
+        {{displayCount()}}
+    </p>
 </div>
