--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -36,3 +36,6 @@
   label="Chip Label"
   type="single"
 ></rte-chip>
+<hr />
+
+<p style="display: inline-block; background-color: bisque;" rteBadge [rteBadgeCount]="1">A badge host</p>
