deploy: ecdea9ea67fe22c150156dbdac3f832ec1311014

--- a/preview/badge-component/angular/components/badge/badge.component.html
+++ b/preview/badge-component/angular/components/badge/badge.component.html
@@ -1,5 +1,5 @@
 <div
-    class="badge size-{{ badgeSize() }} type-{{ badgeType() }}"
+    class="badge size-{{ badgeSize() }} type-{{ badgeType() }} {{ count() <= 0 ? 'hidden' : count() === 1 ? 'visible' : '' }}"
 >
     <ng-container *ngIf="badgeSize() !== 'XS' && badgeSize() !== 'S'">
         <rte-icon
