--- a/preview/badge-component/angular/components/badge/badge.component.scss
+++ b/preview/badge-component/angular/components/badge/badge.component.scss
@@ -62,5 +62,39 @@
 
     p {
         margin: 0;
+        animation: fade-in 0.1s;
     }
+
+
+
+}
+    .hidden {
+        animation: fade-out 0.15s forwards;
+        opacity: 0;
+    }
+
+    .visible {
+        animation: fade-in 0.15s forwards;
+        opacity: 1;
+    }
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+
 }
