fix: correct TextInputComponent's rightIcon display

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/text-input.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/text-input.component.scss
@@ -108,21 +108,31 @@
                 .right-icon {
                     position: absolute;
                     right: $positive-spacing-100;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                     color: var(--content-secondary);
-                    padding: 0 $positive-spacing-025;
-                    height: 24px;
-
-                    &:focus {
-                        outline: none;
-                    }
-
-                    &:focus-visible {
-                        outline: 1px solid var(--border-brand-focused);
-                        border-radius: $radius-m;
-                        &::after {
-                            display: none;
+                    ::ng-deep {
+                        .rte-icon-button {
+                            color: var(--content-secondary);
+                            height: 24px;
+                            width: 24px;
+                            padding: 0 $positive-spacing-025;
+                        }
+    
+                        .rte-icon-button:focus {
+                            outline: none;
+                        }
+    
+                        .rte-icon-button:focus-visible {
+                            outline: 1px solid var(--border-brand-focused);
+                            border-radius: $radius-m;
+                            &::after {
+                                display: none;
+                            }
                         }
                     }
+                        
                 }
 
                 .input-field {
