fix: correct display & behavior of rightIcon & assistiveText for TextInput

--- a/packages/core/design-tokens/tokens/themes/_bleu-iceberg-light.scss
+++ b/packages/core/design-tokens/tokens/themes/_bleu-iceberg-light.scss
@@ -109,6 +109,7 @@ $bleu-iceberg-light: (
   "content-danger": $rouge-indications-600,
   "content-danger-hover": $rouge-indications-700,
   "content-danger-inverse": $core-white,
+  "content-success": $vert-digital-600,
   "content-decorative": $greyscale-900,
   "content-status": $greyscale-900,
   "decorative-neutral": $greyscale-50,
