--- a/packages/core/design-tokens/tokens/themes/_vert-foret-dark.scss
+++ b/packages/core/design-tokens/tokens/themes/_vert-foret-dark.scss
@@ -110,6 +110,7 @@ $vert-foret-dark: (
   "content-danger-hover": $rouge-indications-500,
   "content-danger-inverse": $core-white,
   "content-decorative": $greyscale-900,
+  "content-success": $vert-digital-600,
   "content-status": $greyscale-900,
   "decorative-neutral": $greyscale-50,
   "decorative-bleu-iceberg": $bleu-iceberg-200,
