--- a/packages/core/design-tokens/tokens/themes/_violet-dark.scss
+++ b/packages/core/design-tokens/tokens/themes/_violet-dark.scss
@@ -109,6 +109,7 @@ $violet-dark: (
   "content-danger": $rouge-indications-400,
   "content-danger-hover": $rouge-indications-500,
   "content-danger-inverse": $core-white,
+  "content-success": $vert-digital-400,
   "content-decorative": $greyscale-900,
   "content-status": $greyscale-900,
   "decorative-neutral": $greyscale-50,
