deploy: 1e116d0846339ca4c8e54d180abbc86d035db143

--- a/preview/text-input/angular/main.css
+++ b/preview/text-input/angular/main.css
@@ -403,6 +403,7 @@
   --content-danger: #de2048;
   --content-danger-hover: #c81640;
   --content-danger-inverse: #ffffff;
+  --content-success: #09b05f;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -551,6 +552,7 @@
   --content-danger: #f97385;
   --content-danger-hover: #f14662;
   --content-danger-inverse: #ffffff;
+  --content-success: #3cec96;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -699,6 +701,7 @@
   --content-danger: #de2048;
   --content-danger-hover: #c81640;
   --content-danger-inverse: #ffffff;
+  --content-success: #09b05f;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -847,6 +850,7 @@
   --content-danger: #f97385;
   --content-danger-hover: #f14662;
   --content-danger-inverse: #ffffff;
+  --content-success: #3cec96;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -995,6 +999,7 @@
   --content-danger: #de2048;
   --content-danger-hover: #c81640;
   --content-danger-inverse: #ffffff;
+  --content-success: #09b05f;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -1144,6 +1149,7 @@
   --content-danger-hover: #f14662;
   --content-danger-inverse: #ffffff;
   --content-decorative: #201f1f;
+  --content-success: #09b05f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
   --decorative-bleu-iceberg: #c7dbf0;
