--- a/packages/react/src/components/chip/Chip.module.scss
+++ b/packages/react/src/components/chip/Chip.module.scss
@@ -1,7 +1,11 @@
 @use '@design-system-rte/core/design-tokens/main-internal.scss' as *;
 
+@mixin compact-spacing {
+  padding: $positive-spacing_0 $positive-spacing_150;
+}
+
 .chip {
-  @include typography-button-m;
+
   overflow: hidden;
   color: var(--content-brand-default);
   text-overflow: ellipsis;
@@ -50,16 +54,24 @@
   &[data-compact-spacing='true'] {
     padding: $positive-spacing_0 $positive-spacing_150;
   }
+
+  &[data-type='input'] {
+    padding: $positive-spacing_0 $positive-spacing_050;
+    pointer-events: none;
+  }
 }
 
 .chip-label {
+  @include typography-button-m;
   padding: $positive-spacing_0 $positive-spacing_075;
+
+  &[data-type='input'] {
+    @include typography-text-m;
+    padding: $positive-spacing_0 $positive-spacing_100;
+  }
 }
 
 .chip-icon-container {
-  // display: inline-flex;
-  // align-items: center;
-  // justify-content: center;
   position: relative;
   width: 16px;
   height: 16px;
@@ -87,4 +99,45 @@
 .chip-icon--hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+.chip-close-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: $positive-spacing_0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: var(--content-brand-default);
+  border-radius: $radius-pill;
+  width: 16px;
+  height: 16px;
+  pointer-events: auto;
+  transition: background-color 200ms ease-in-out;
+
+  &:disabled {
+    cursor: default;
+    color: var(--content-disabled);
+    background: var(--background-disabled);
+    outline: none
+  }
+
+  &:hover:not(:disabled) {
+    background: var(--background-brand-hover);
+    color: var(--background-brand-unselected-hover);
+  }
+
+  &:focus-visible {
+    outline: 1px solid var(--border-brand-focused);
+  }
+
+  &--icon {
+    width: 16px;
+    height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
