deploy: 7a05d068e7d0a488a052aee14da4509eb152b0e3

--- a/preview/add-chip/angular/components/chip/chip.component.html
+++ b/preview/add-chip/angular/components/chip/chip.component.html
@@ -2,7 +2,7 @@
   class="chip"
   tabindex="0"
   [attr.role]="role()"
-  [attr.data-selected]="selected()"
+  [attr.data-selected]="isCheckable() ? selected() : null"
   [attr.data-disabled]="disabled()"
   [attr.data-compact-spacing]="compactSpacing()"
   [attr.data-type]="type()"
