feat(chip): export chip component

--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -31,3 +31,8 @@
 
 <rte-text-input label="Text Input" [value]="inputValue()" (valueChange)="handleInputChange($event)" />
 <h4>The input is : {{inputValue()}}</h4>
+<hr />
+<rte-chip 
+  label="Chip Label"
+  type="single"
+></rte-chip>
