--- a/preview/text-input/angular/components/text-input/text-input.component.html
+++ b/preview/text-input/angular/components/text-input/text-input.component.html
@@ -36,7 +36,7 @@
       class="input {{labelPosition()}}"
       [ngClass]="{'disabled': disabled(), 'read-only': readOnly()}"
     >
-      <div class="input-bar" [ngClass]="{'withLeftIcon': displayedLeftIcon(), 'withRightIcon': rightIconAction()}">
+      <div class="input-bar" [ngClass]="{'with-left-icon': displayedLeftIcon(), 'with-right-icon': rightIconAction()}">
         <ng-container *ngIf="displayedLeftIcon()">
           <rte-icon
             appearance="outlined"
@@ -95,7 +95,7 @@
   </div>
 
   <ng-container *ngIf="displayCounter() && labelPosition() === 'side'">
-    <p class="input-counter">
+    <p class="input-counter" data-testid="input-counter">
       {{ characterCount() }}/{{ maxLength() }}
     </p>
   </ng-container>
