feat(text-input): add id property to text input component to get better accessibility

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/text-input.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/text-input.component.html
@@ -6,7 +6,7 @@
   <ng-container *ngIf="label()">
     <div class="text">
       <div class="label-container">
-        <label class="input-label" id="inputLabel">
+        <label class="input-label" [id]="'input-label-' + id" [for]="id()">
           {{ label() }}
         </label>
         <ng-container *ngIf="required()">
@@ -48,6 +48,7 @@
 
         <input
           #inputRef
+          [id]="id()"
           class="input-field"
           [ngClass]="{'error': error()}"
           [attr.aria-label]="ariaLabel()"
