deploy: 0f388888a3f4c7d2a6d5c489691d7594dc797ddc

--- a/preview/badge-component/angular/components/badge/badge.component.html
+++ b/preview/badge-component/angular/components/badge/badge.component.html
@@ -1,6 +1,7 @@
 <div
     class="badge size-{{ badgeSize() }} type-{{ badgeType() }}"
-    [ngClass]="{'hidden': count() <= 0}"
+    data-testid="badge"
+    [ngClass]="{'hidden': count() === 0}"
 >
     <ng-container *ngIf="badgeSize() !== 'XS' && badgeSize() !== 'S'">
         <rte-icon
@@ -8,7 +9,7 @@
             class="badge-icon"
             [name]="icon()"
             [size]="iconSize()"
-        ></rte-icon>
+        />
         <p *ngIf="showText()" class="badge-text">
             {{displayCount()}}
         </p>
