--- a/preview/badge-component/angular/components/badge/badge.component.scss
+++ b/preview/badge-component/angular/components/badge/badge.component.scss
@@ -6,6 +6,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: opacity 0.15s ease-in-out;
+
+    &.hidden {
+        opacity: 0;
+    }
 
     &.type-brand {
         @include elevation-brand-shadow-2;
@@ -60,41 +65,8 @@
         padding: $positive-spacing_0 $positive-spacing_050;
     }
 
-    p {
+    .badge-text {
         margin: 0;
-        animation: fade-in 0.1s;
-    }
-
-
-
-}
-    .hidden {
-        animation: fade-out 0.15s forwards;
-        opacity: 0;
-    }
-
-    .visible {
-        animation: fade-in 0.15s forwards;
-        opacity: 1;
-    }
-
-@keyframes fade-in {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes fade-out {
-    from {
-        opacity: 1;
-    }
-
-    to {
-        opacity: 0;
     }
 
 }
