--- a/preview/badge-component/angular/main.css
+++ b/preview/badge-component/angular/main.css
@@ -405,6 +405,7 @@
   --content-danger-inverse: #ffffff;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
+  --content-success: #09b05f;
   --decorative-neutral: #ebebea;
   --decorative-bleu-iceberg: #c7dbf0;
   --decorative-vert-foret: #d7f4e6;
@@ -553,6 +554,7 @@
   --content-danger-inverse: #ffffff;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
+  --content-success: #09b05f;
   --decorative-neutral: #ebebea;
   --decorative-bleu-iceberg: #c7dbf0;
   --decorative-vert-foret: #d7f4e6;
@@ -701,6 +703,7 @@
   --content-danger-inverse: #ffffff;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
+  --content-success: #09b05f;
   --decorative-neutral: #ebebea;
   --decorative-bleu-iceberg: #c7dbf0;
   --decorative-vert-foret: #d7f4e6;
@@ -849,6 +852,7 @@
   --content-danger-inverse: #ffffff;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
+  --content-success: #09b05f;
   --decorative-neutral: #ebebea;
   --decorative-bleu-iceberg: #c7dbf0;
   --decorative-vert-foret: #d7f4e6;
@@ -997,6 +1001,7 @@
   --content-danger-inverse: #ffffff;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
+  --content-success: #09b05f;
   --decorative-neutral: #ebebea;
   --decorative-bleu-iceberg: #c7dbf0;
   --decorative-vert-foret: #d7f4e6;
@@ -1145,6 +1150,7 @@
   --content-danger-inverse: #ffffff;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
+  --content-success: #09b05f;
   --decorative-neutral: #ebebea;
   --decorative-bleu-iceberg: #c7dbf0;
   --decorative-vert-foret: #d7f4e6;
