--- a/preview/badge-component/angular/components/badge/badge.component.html
+++ b/preview/badge-component/angular/components/badge/badge.component.html
@@ -3,12 +3,12 @@
     data-testid="badge"
     [ngClass]="{'hidden': count() === 0}"
 >
-    <ng-container *ngIf="badgeSize() !== 'XS' && badgeSize() !== 'S'">
+    <ng-container *ngIf="iconSize()">
         <rte-icon
             *ngIf="showIcon()"
             class="badge-icon"
             [name]="icon()"
-            [size]="iconSize()"
+            [size]="iconSize()!"
         />
         <p *ngIf="showText()" class="badge-text">
             {{displayCount()}}
