deploy: f4cb3d77a6de1317b0a0fb437ea2d22537733d2f

--- a/preview/badge-component/angular/components/badge/badge.component.html
+++ b/preview/badge-component/angular/components/badge/badge.component.html
@@ -1,17 +1,15 @@
 <div
     class="badge size-{{ badgeSize() }} type-{{ badgeType() }}"
     data-testid="badge"
-    [ngClass]="{'hidden': count() === 0}"
+    [ngClass]="{'hidden': !showBadge()}"
 >
-    <ng-container *ngIf="iconSize()">
-        <rte-icon
-            *ngIf="showIcon()"
-            class="badge-icon"
-            [name]="icon()"
-            [size]="iconSize()!"
-        />
-        <p *ngIf="showText()" class="badge-text">
-            {{displayCount()}}
-        </p>
-    </ng-container>
+    <rte-icon
+        *ngIf="showIcon()"
+        class="badge-icon"
+        [name]="icon()"
+        [size]="iconSize()!"
+    />
+    <p *ngIf="showText()" class="badge-text">
+        {{displayCount()}}
+    </p>
 </div>
