--- a/packages/angular/projects/ds-rte-lib/src/lib/components/badge/badge.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/badge/badge.component.scss
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: center;
     transition: opacity 0.15s ease-in-out;
+    box-sizing: border-box;
 
     &.hidden {
         opacity: 0;
@@ -53,6 +54,9 @@
         top: -4px;
         right: -4px;
         padding: $positive-spacing_0 $positive-spacing_025;
+        &.count-overflow {
+            padding: $positive-spacing_0 $positive-spacing_050;
+        }
     }
 
     &.size-l {
@@ -63,6 +67,9 @@
         top: -8px;
         right: -8px;
         padding: $positive-spacing_0 $positive-spacing_050;
+        &.count-overflow {
+            padding: $positive-spacing_0 $positive-spacing_075;
+        }
     }
 
     .badge-text {
